--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Weather</title>
 </head>
 <body>
-
+    <div class="block">
         <div class="location">
             <h1 class="location-timezone">Timezone</h1>
-            <div class="icon"></div>
+            <div class="icon">
+            </div>
 
         </div>
         <div class="temperature">
@@ -18,8 +19,10 @@
                 <h2 class="temperature-degree">34</h2>
                 <span>F</span>
             </div>
-                <div class="temperature-description">Deathly Chilly</div> 
+                <div class="temperature-description">checking</div> 
         </div>
+    </div>
     <script src="app.js"></script>
+    <script type="text/javascript" src="weather.json></script>
 </body>
 </html>
